[gd_scene load_steps=12 format=3 uid="uid://rv6571yi7xcd"]

[ext_resource type="Script" uid="uid://blsrees5skosx" path="res://src/shop/shop.gd" id="1_0npe2"]
[ext_resource type="PackedScene" uid="uid://5ra1qowsnvi0" path="res://src/properties/property.tscn" id="2_36wjb"]
[ext_resource type="Texture2D" uid="uid://cmkgwu5kh3ye1" path="res://assets/UI/coins.png" id="2_u1ah8"]
[ext_resource type="Script" uid="uid://oa6scgtcn8r4" path="res://src/properties/property_resource.gd" id="3_uvrpi"]

[sub_resource type="LabelSettings" id="LabelSettings_u1ah8"]
font_size = 32
font_color = Color(0.905882, 0.729412, 0.137255, 1)
outline_color = Color(0.631373, 0.509804, 0.0941176, 1)

[sub_resource type="Resource" id="Resource_uvrpi"]
script = ExtResource("3_uvrpi")
min_value = 5
increment = 5
price_increment = 10
min_price = 20
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[sub_resource type="Resource" id="Resource_u1ah8"]
script = ExtResource("3_uvrpi")
min_value = 100
increment = 10
price_increment = 10
min_price = 10
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[sub_resource type="Resource" id="Resource_pm5cy"]
script = ExtResource("3_uvrpi")
min_value = 20
increment = 2
price_increment = 20
min_price = 20
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[sub_resource type="Resource" id="Resource_an80g"]
script = ExtResource("3_uvrpi")
min_value = 1
increment = 1
price_increment = 20
min_price = 20
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[sub_resource type="Resource" id="Resource_ruqf7"]
script = ExtResource("3_uvrpi")
min_value = 1
increment = 1
price_increment = 25
min_price = 50
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[sub_resource type="Resource" id="Resource_cci7d"]
script = ExtResource("3_uvrpi")
min_value = 2
increment = 2
price_increment = 25
min_price = 25
metadata/_custom_type_script = "uid://oa6scgtcn8r4"

[node name="Shop" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
script = ExtResource("1_0npe2")

[node name="Balance" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Balance"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_u1ah8")

[node name="Label" type="Label" parent="Balance"]
layout_mode = 2
size_flags_horizontal = 10
label_settings = SubResource("LabelSettings_u1ah8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Hitpoints" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_uvrpi")
property_name = "Hitpoints"

[node name="ShipPower" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_u1ah8")
property_name = "Ship Power"

[node name="ShipSteeringAngle" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_pm5cy")
property_name = "Ship Steering Angle"

[node name="ShipRammingDamage" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_an80g")
property_name = "Ship Ramming Damage"
default_value = 1

[node name="CannonDamage" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_ruqf7")
property_name = "Cannon Damage"

[node name="SailorHeal" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
layout_mode = 2
property = SubResource("Resource_cci7d")
property_name = "Sailor Heal Amount"

[node name="HBoxContainer7" parent="VBoxContainer" instance=ExtResource("2_36wjb")]
visible = false
layout_mode = 2
